--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.mvn/
 
 ### STS ###
 .apt_generated
@@ -14,7 +15,6 @@ target/
 .settings
 .springBeans
 .sts4-cache
-.mvn
 
 ### IntelliJ IDEA ###
 .idea
