Update config parameters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-log.file.path= D:/
+log.file.path= C:/Logger/
 
+#Log Level
 level.log.console=ERROR
 level.log.file=WARNING
 level.log.bdd=SEVERAL
+
+#BDD Connection
+server= jdbc:mysql://localhost:3306/challengeSoaint
+username= root
+password= 123456789
+driver= com.mysql.jdbc.Driver
